# geometry-aware-fisher-kernel

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/figures/: experiment2_gallery.html
docs/reference/: thesis_pc_mask.dot
docs/results/: experiment1_results.csv  experiment1_results.json  experiment2_results.csv  experiment2_results.json  simulation_geometry_results.csv  simulation_geometry_results.json
examples/: compare_feature_types.py  config.py  plot_dependencies.py  run_ablations.py  run_baselines.py  run_experiment2.py  run_experiments.py  run_geometry_diagnostics.py  run_heart_disease.py  run_paper_experiments.py  run_simulation_study.py  test_data_driven.py  test_nested_cv.py  test_pipeline.py
geometry_fisher/: __init__.py  baselines.py  composite.py  cross_validation.py  data.py  diagnostics.py  experiments.py  features.py  geometry.py  nested_cv.py  paper_experiments.py  pipeline.py  simulation.py  structure.py  visualization.py
tests/: test_thesis_alignment.py
