[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geometry-fisher"
version = "0.1.0"
description = "Geometry-Aware Generalized Fisher Kernel for Mixed-Type Data under Composite Likelihood"
authors = [
    {name = "Konstantinos Gkouveris", email = "gkouveris1414@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "scikit-learn>=1.1",
    "pandas>=1.4",
    "jax>=0.4",
    "jaxlib>=0.4",
    "optax>=0.1",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "causal-learn>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["geometry_fisher*"]